<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FAppSoporte">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="16dp">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView_botonLocalizate_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            android:backgroundTint="@color/gris"
            app:strokeWidth="2dp"
            app:strokeColor="@color/negro"
            android:layout_margin="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_margin="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tituloTlfSoporte"
                    android:textColor="@color/negro"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="4dp"
                    android:layout_margin="4dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/celda_tabla_blanco"
                    android:text="@string/tituloTlf"
                    android:textColor="@color/negro"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="4dp"
                    android:layout_margin="4dp"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView_botonMapa_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            android:backgroundTint="@color/gris"
            app:strokeWidth="2dp"
            app:strokeColor="@color/negro"
            android:layout_margin="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_margin="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tituloCorreoSoporte"
                    android:textColor="@color/negro"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="4dp"
                    android:layout_margin="4dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/celda_tabla_blanco"
                    android:text="@string/tituloCorreo"
                    android:textColor="@color/negro"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="4dp"
                    android:layout_margin="4dp"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>