<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Theme.TFGApp"
    android:padding="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/celda_tabla_blanco"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="2dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/celda_tabla_azul"
            android:text="@string/tituloPopUpSalir"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/blanco"
            android:padding="4dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/avisoPopUpSalir"
            android:textSize="15sp"
            android:textColor="@color/negro"
            android:padding="4dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="4dp">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView_botonCancelar_popUpSalirApp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:backgroundTint="@color/rojo"
                app:strokeColor="@color/negro"
                app:strokeWidth="2dp"
                app:cardCornerRadius="8dp"
                android:clickable="true"
                android:layout_margin="2dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp">
                    <ImageView
                        android:id="@+id/imageView_iconoBotonCancelar_popUpSalirApp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/cancelar"
                        android:scaleType="centerInside"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/botonCancelar"
                        android:textSize="15sp"
                        android:textColor="@color/negro"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/imageView_iconoBotonCancelar_popUpSalirApp"
                        android:padding="4dp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView_botonSalir_popUpSalirApp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:backgroundTint="@color/verde"
                app:strokeColor="@color/negro"
                app:strokeWidth="2dp"
                app:cardCornerRadius="8dp"
                android:clickable="true"
                android:layout_margin="2dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp">
                    <ImageView
                        android:id="@+id/imageView_iconoBotonSalir_popUpSalirApp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/salir"
                        android:scaleType="centerInside"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/botonSalirApp"
                        android:textSize="15sp"
                        android:textColor="@color/negro"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/imageView_iconoBotonSalir_popUpSalirApp"
                        android:padding="4dp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>