<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FAppMenu"
    style="@style/Theme.TFGApp">

    <TextView
        android:id="@+id/textView_tituloMenu_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloMenu"
        android:textColor="@color/blanco"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:padding="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/textView_tituloMenu_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView_botonLocalizate_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="12dp"
                android:backgroundTint="@color/blanco"
                app:strokeColor="@color/negro"
                app:strokeWidth="2dp"
                android:layout_margin="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/localizate"/>
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/celda_tabla_azul"
                        android:text="@string/tituloLocalizate"
                        android:textColor="@color/blanco"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:padding="4dp"
                        android:layout_marginTop="12dp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView_botonMapa_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="12dp"
                android:backgroundTint="@color/blanco"
                app:strokeColor="@color/negro"
                app:strokeWidth="2dp"
                android:layout_margin="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/mapa"/>
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/celda_tabla_azul"
                        android:text="@string/tituloMapa"
                        android:textColor="@color/blanco"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:padding="4dp"
                        android:layout_marginTop="12dp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView_botonTutorial_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="12dp"
                android:backgroundTint="@color/blanco"
                app:strokeColor="@color/negro"
                app:strokeWidth="2dp"
                android:layout_margin="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/tutorial"/>
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/celda_tabla_azul"
                        android:text="@string/tituloTutorial"
                        android:textColor="@color/blanco"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:padding="4dp"
                        android:layout_marginTop="12dp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView_botonSoporte_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="12dp"
                android:backgroundTint="@color/blanco"
                app:strokeColor="@color/negro"
                app:strokeWidth="2dp"
                android:layout_margin="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/soporte"/>
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/celda_tabla_azul"
                        android:text="@string/tituloSoporte"
                        android:textColor="@color/blanco"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:padding="4dp"
                        android:layout_marginTop="12dp"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>