<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FAppMapa"
    style="@style/Theme.TFGApp">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView_mapa_mapa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        mapbox:mapbox_cameraTargetLat="40.63587"
        mapbox:mapbox_cameraTargetLng="-3.16865"
        mapbox:mapbox_cameraZoom="18" />

    <ProgressBar
        android:id="@+id/progressBar_cargando_mapa"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_contenedorProbabilidad_mapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        app:cardCornerRadius="16dp"
        android:backgroundTint="@color/azul"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintBottom_toTopOf="@id/linearLayout_contenedorInformacion_mapa"
        android:padding="2dp"
        android:layout_margin="8dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/textView_probabilidad_mapa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XX.XX %"
            android:textColor="@color/negro"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:padding="14dp"/>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/linearLayout_contenedorInformacion_mapa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/celda_tabla_blanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linearLayout_contenedorBotones_mapa"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                app:cardCornerRadius="8dp"
                android:backgroundTint="@color/azul"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="2dp"
                android:layout_margin="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tituloPOI"
                    android:textColor="@color/blanco"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:padding="4dp"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/textView_poi_mapa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/tituloPOI"
                android:textColor="@color/negro"
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="4dp"
                android:layout_margin="4dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                app:cardCornerRadius="8dp"
                android:backgroundTint="@color/azul"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="2dp"
                android:layout_margin="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tituloUbicacion"
                    android:textColor="@color/blanco"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:padding="4dp"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/textView_ubicacion_mapa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/tituloUbicacion"
                android:textColor="@color/negro"
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="4dp"
                android:layout_margin="4dp"/>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            app:cardCornerRadius="8dp"
            android:backgroundTint="@color/azul"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="2dp"
            android:layout_margin="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tituloDescripcion"
                android:textColor="@color/blanco"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:padding="4dp"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/textView_descripcion_mapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/tituloDescripcion"
            android:textColor="@color/negro"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="4dp"
            android:layout_margin="4dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_contenedorBotones_mapa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView_botonMinMax_mapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            app:cardCornerRadius="8dp"
            android:backgroundTint="@color/azul"
            mapbox:strokeColor="@color/negro"
            mapbox:strokeWidth="2dp"
            android:padding="2dp"
            android:layout_margin="4dp">

            <ImageView
                android:id="@+id/imageView_iconoMinMax_mapa"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/maximizar"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView_botonCamara_mapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            android:backgroundTint="@color/azul"
            mapbox:strokeColor="@color/negro"
            mapbox:strokeWidth="2dp"
            android:padding="2dp"
            android:layout_margin="4dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/camara"/>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>